--- a/gb/15/10/8/n4545377.md
+++ b/gb/15/10/8/n4545377.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/s2531/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/s2531/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/s2531/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/s2531/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/s2531/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/s2531/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/s2531/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/s2531/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/s2531/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/s2531/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/s2531/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/s2531/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/s2531/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/s2531/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/s2531/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/s2531/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/s2531/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/s2531/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/s2531/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/s2531/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/s2531/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>无健保 加拿大卡城难民面临22万医药费</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2015年10月08日讯】（大纪元记者李平多伦多编译报导）卡尔加里一户哥伦比亚裔<ahref="https://github.com/s2531/djy/blob/master/gb/tag/%E9%9A%BE%E6%B0%91.md#1">难民</a>家庭，在难民申请等候期间，男主人突发心脏病后送医救治，加上女儿输卵管囊肿切除手术，医疗费共22万，这些费用全部得自己掏，只因身份还没审批下来。 </p>
+<p>【大纪元2015年10月08日讯】（大纪元记者李平多伦多编译报导）卡尔加里一户哥伦比亚裔<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E9%9A%BE%E6%B0%91.md#1">难民</a>家庭，在难民申请等候期间，男主人突发心脏病后送医救治，加上女儿输卵管囊肿切除手术，医疗费共22万，这些费用全部得自己掏，只因身份还没审批下来。 </p>
 <p><h2>祸不单行</h2>
-<p>据CTV News报导，7年前，杜克（John Fredy Duque）因国内战乱，带领全家人逃难到加拿大，随后在卡尔加里定居、就业和纳税。2011年，<ahref="https://github.com/s2531/djy/blob/master/gb/tag/%E9%9A%BE%E6%B0%91.md#1">难民</a>申请被拒，全家人只得申诉人道移民，目前申诉案仍在积压中。今年夏天，杜克在湖边正准备上船时，突然昏倒，随后被送医救治，被医生告知是心脏病发作。手术住院完毕后，20多万的账单让全家人惊讶得下巴都快掉下来了！ <br />　　<br />祸不单行！随后，医生又发现杜克女儿Alejandra输卵管中有囊肿，必须切除，手术费用要2万。无奈之下，这家人想到了申请联邦过渡健保计划（IFHPP），希望得到联邦资助，却被告知该计划只适合对公共健康有影响的传染性疾病。 <br />　　<br />杜克律师马恩（Jean Munn）女士说，这家人根本承担不起这2笔巨额费用。在加拿大工作的难民申请人，无论是打最低时薪工，还是做高薪工，都没有任何医保，一点也不公平。 </p>
+<p>据CTV News报导，7年前，杜克（John Fredy Duque）因国内战乱，带领全家人逃难到加拿大，随后在卡尔加里定居、就业和纳税。2011年，<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E9%9A%BE%E6%B0%91.md#1">难民</a>申请被拒，全家人只得申诉人道移民，目前申诉案仍在积压中。今年夏天，杜克在湖边正准备上船时，突然昏倒，随后被送医救治，被医生告知是心脏病发作。手术住院完毕后，20多万的账单让全家人惊讶得下巴都快掉下来了！ <br />　　<br />祸不单行！随后，医生又发现杜克女儿Alejandra输卵管中有囊肿，必须切除，手术费用要2万。无奈之下，这家人想到了申请联邦过渡健保计划（IFHPP），希望得到联邦资助，却被告知该计划只适合对公共健康有影响的传染性疾病。 <br />　　<br />杜克律师马恩（Jean Munn）女士说，这家人根本承担不起这2笔巨额费用。在加拿大工作的难民申请人，无论是打最低时薪工，还是做高薪工，都没有任何医保，一点也不公平。 </p>
 <p><h2> 难民医疗费用如何解决？ </h2>
 <p>实际上，以前多数难民申请人是有医保的。但保守党为防止滥用，于2012年修订了难民医保政策。随后，一个医生和律师团体将联邦政府告到法庭并赢得诉状，联邦政府不服判决，向联邦上诉法庭提出申诉，该案将于本月底开庭审理。 <br />　　<br />2014年，联系政府制定一临时医保计划，为一些无法享受省或地区医保的重新安置难民和难民申请人提供有限的临时医疗福利。加拿大难民委员会（CCR）透露，联邦取消难民申请人医保后，有些省也制定了一些医保计划来填补由此造成的空白，但亚省不在其中。 <br />　　<br />目前杜克一家，只有妻子一人有工作，而杜克先前打工的泊车公司已倒闭，女儿Alejandra因术后需康复静养也暂停打工。卡尔加里哥伦比亚社区目前正想办法帮助这家人摆脱困境，Go Fund Me筹款网页和另一个筹款团体已帮他们筹到6,500元。亚省医疗服务厅也表示会和杜克一家人共同想出一个支付解决方案。 <br />　　<br />CTV新闻了解到情况是，杜克一家人目前还在等候人道移民审理结果，同时还在等移民部健康风险评估报告最后结果。针对CTV询问，移民发言人表示，由于隐私原因，不便对这一个别案例进行评论，除非杜克一家人事先同意。◇ </p>
 <p>责任编辑： 乔亓</p>
@@ -16,42 +16,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/15/9/21/n4532601.md#1">最小难民！在娘胎里头中弹 女婴奇迹存活</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/15/10/1/n4540745.md#1">川普：如当选总统 就遣返所有叙利亚难民</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/15/10/4/n4542509.md#1">欢迎难民 维也纳万人大游行</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/15/10/4/n4542735.md#1">难民危机之下 荷兰PVV党支持者激增</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/15/10/6/n4543701.md#1">欧盟官员：按指纹可过滤恐怖分子</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/15/10/7/n4545016.md#1">一难民行刺瑞典大臣和丹麦警察</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/15/10/7/n4545036.md#1">国际货币基金组织敦促瑞典帮助难民融入</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/15/10/7/n4545111.md#1">芬兰遭遇比经济衰退更棘手的难民问题</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/15/10/8/n4545190.md#1">申请加拿大难民  过半中国人被拒</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/15/10/8/n4545284.md#1">化解移民危机 德吁重订庇护规定</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/9/21/n4532601.md#1">最小难民！在娘胎里头中弹 女婴奇迹存活</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/10/1/n4540745.md#1">川普：如当选总统 就遣返所有叙利亚难民</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/10/4/n4542509.md#1">欢迎难民 维也纳万人大游行</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/10/4/n4542735.md#1">难民危机之下 荷兰PVV党支持者激增</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/10/6/n4543701.md#1">欧盟官员：按指纹可过滤恐怖分子</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/10/7/n4545016.md#1">一难民行刺瑞典大臣和丹麦警察</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/10/7/n4545036.md#1">国际货币基金组织敦促瑞典帮助难民融入</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/10/7/n4545111.md#1">芬兰遭遇比经济衰退更棘手的难民问题</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/10/8/n4545190.md#1">申请加拿大难民  过半中国人被拒</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/10/8/n4545284.md#1">化解移民危机 德吁重订庇护规定</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/24/n9988943.md#1" target="_blank">共产党毁灭人类暴政录——前言</a></li><li><a href="https://github.com/s2531/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/23/n11403596.md#1" target="_blank">澳纽正义之声汇入全球反迫害之洪势</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/10/n11102523.md#1" target="_blank">马吉卫：难以平复的伤疤</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/26/n10667251.md#1" target="_blank">这些患绝症的精英们何以逢生（3）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/7/n12168723.md#1">大陆储户巨额存款频消失 涉事银行说法惹议</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/8/n12171270.md#1">韩国瑜遭罢免后狂呛人 张雅琴：跟共产党真像</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/8/n12169691.md#1">美海关查获一批中国制假钞 总值35.1万美元</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/9/n12172382.md#1">中共多架苏恺30战机入侵 台湾空军驱离</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/8/n12169437.md#1">台湾安心旅游方案出炉 自由行最高补助2千元</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/6/n12166947.md#1">韩国瑜遭罢免 杜汶泽用简体字嘲讽获爆赞</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/6/n12167087.md#1">遭罢免 韩国瑜能东山再起？台名嘴下惊人断语</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/8/n12169269.md#1">吴朋奉雨中告别式 演艺圈好友与爱犬送行</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/8/n12170284.md#1">吴尊补办延迟16年婚礼 见太太穿婚纱哽咽落泪</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/8/n12171460.md#1">郝海东效应？导演微博谈足球先生当总统遭禁</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/4/n12159940.md#1">一个庶民家族的故事 (6)没有半毛钱怎么过活? 祖父的活计</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/7/n12167819.md#1">睡觉时停止呼吸 美国男子看到无数天使唱歌</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/8/n12169940.md#1">作恶太多 康生曹轶欧夫妇生前遭索命</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/7/12/27/n1956051.md#1">城市中的神殿——另类神殿故事</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/8/n12169544.md#1">西班牙特殊小镇 完全被法国领土包围</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740262.md#1">【秦鹏直播】不让戴口罩 李克强和习杠上了？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740815.md#1">【微视频】粮价涨多少？美国争论中国关税</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740248.md#1">【远见快评】美媒曝东航坠毁是人为 东航回应</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739318.md#1">备战台海 广东高层会议秘密录音曝光</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739256.md#1">李克强讲话“上墙”党媒争相报 释何信号</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/14/n13736831.md#1">11种营养和饮食 改善成人过动症</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/s2531/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/s2531/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/10/8/n4545377.htm">无健保 加拿大卡城难民面临22万医药费</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/10/8/n4545377.htm">无健保 加拿大卡城难民面临22万医药费</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/s2531/djy/blob/master/gb/15/10/8/n4545377.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/s2531/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/s2531/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/s2531/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/15/10/8/n4545377.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
